--- a/lib/rumbl_web/templates/video/form.html.eex
+++ b/lib/rumbl_web/templates/video/form.html.eex
@@ -11,6 +11,7 @@
 
   <%= label f, :category_id, "Category" %>
   <%= select f, :category_id, category_select_options(@categories), prompt: "Choose a category" %>
+  <%= error_tag f, :category_id %>
 
   <%= label f, :title %>
   <%= text_input f, :title %>
